--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
-  min-height: 2000px;
-}
 .jumbotron {
-  padding-top: 2rem;
+  padding-top: 6rem;
   background-color: #e2e3e4;
 }
 #projects {
   background-color: #e2e3e4;
+}
+section {
+  padding-top: 5rem;
 }
